[build-system]
requires = ["setuptools>=42", "pytest>=7", "pymysql>=1.0.2", "sqlalchemy>=1.4.40", "Faker>=14.1.0", "rich>=12.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dancer"
version = "0.0.15"
authors = [
  { name="vaxy", email="ordinaryparksee@gmail.com" },
]
description = ""
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ordinaryparksee/dancer"
"Bug Tracker" = "https://github.com/ordinaryparksee/dancer/issues"

[tool.pytest.ini_options]
pythonpath = "src/"